Make some changes.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     ];
 
     let index = 0;
+    let y = 0;
 
     function chooseYes() {
       document.body.innerHTML = "<h1>🎉 Congratulations!</h1>";
