Make some changes.

--- a/index.html
+++ b/index.html
@@ -1,51 +1,66 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Just One Question 💌</title>
   <style>
     body {
       font-family: 'Segoe UI', cursive;
       text-align: center;
-      padding-top: 80px;
       background-color: #fff0f5;
       color: #c2185b;
-      transition: all 0.3s ease;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
     }
-    .question {
-      font-size: 28px;
-      margin: 30px auto;
+
+    .container {
+      padding: 20px;
       max-width: 90%;
     }
+
+    .question {
+      font-size: 5vw;
+      margin-bottom: 30px;
+    }
+
     button {
-      font-size: 20px;
-      padding: 14px 28px;
-      margin: 15px;
+      font-size: 5vw;
+      padding: 12px 24px;
+      margin: 10px;
       border-radius: 12px;
       border: none;
       cursor: pointer;
-      transition: all 0.3s ease;
+      width: 40vw;
+      max-width: 200px;
     }
+
     .yes-btn {
       background-color: #f06292;
       color: white;
     }
+
     .yes-btn:hover {
       background-color: #ec407a;
     }
+
     .no-btn {
       background-color: white;
       color: #f06292;
       border: 2px solid #f06292;
     }
-    .no-btn:hover {
-      background-color: #fff0f5;
-      transform: scale(1.05);
-    }
+
     .heart {
-      font-size: 50px;
-      margin-top: 30px;
+      font-size: 10vw;
+      margin-top: 20px;
       animation: pulse 1s infinite;
     }
+
     @keyframes pulse {
       0% { transform: scale(1); }
       50% { transform: scale(1.2); }
@@ -55,10 +70,12 @@
 </head>
 <body>
 
-  <div class="question" id="question">Will you go on a date with me? 💖</div>
-  <button class="yes-btn" onclick="chooseYes()">Yes 💕</button>
-  <button class="no-btn" onclick="chooseNo()">No 🙈</button>
-  <div class="heart">💗</div>
+  <div class="container">
+    <div class="question" id="question">Will you go on a date with me? 💖</div>
+    <button class="yes-btn" onclick="chooseYes()">Yes 💕</button>
+    <button class="no-btn" onclick="chooseNo()">No 🙈</button>
+    <div class="heart">💗</div>
+  </div>
 
   <script>
     const messages = [
@@ -78,16 +95,17 @@
 
     function chooseYes() {
       document.body.innerHTML = `
-        <h1 style="font-size: 32px; color: #c2185b;">🎉 YAY! 💞</h1>
-        <p style="font-size: 24px;">Get ready, babe... I'm taking you out at 7! 🌙✨</p>
-        <p style="font-size: 20px;">Dress up, bring that smile I love! 💃🕺</p>
-        <div style="font-size: 60px; margin-top: 20px;">💑💖🌹</div>
+        <div style="padding: 20px; text-align: center;">
+          <h1 style="font-size: 6vw; color: #c2185b;">🎉 YAY! 💞</h1>
+          <p style="font-size: 5vw;">Get ready, babe... I'm taking you out at 7! 🌙✨</p>
+          <p style="font-size: 4.5vw;">Dress up, bring that smile I love! 💃🕺</p>
+          <div style="font-size: 12vw; margin-top: 20px;">💑💖🌹</div>
+        </div>
       `;
     }
 
     function chooseNo() {
-      const question = document.getElementById("question");
-      question.innerText = messages[index % messages.length];
+      document.getElementById("question").innerText = messages[index % messages.length];
       index++;
     }
   </script>
