--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         picked_date: date
       };
 
-      emailjs.send("YOUR_SERVICE_ID", "YOUR_TEMPLATE_ID", templateParams)
+      emailjs.send("service_u34ry5f", "template_43x6gso", templateParams)
         .then(function(response) {
           console.log("SUCCESS!", response.status, response.text);
         }, function(error) {
