--- a/index.html
+++ b/index.html
@@ -3,20 +3,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Romantic Date Invite 💖</title>
+  <title>Romantic Date Invite 💙</title>
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
+
     body {
+      background: #e6f0ff; /* romantic blue background */
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      margin: 0;
-      background: #fff0f5;
-      flex-direction: column;
-      padding: 20px;
+      min-height: 100vh;
     }
+
     .container {
       background: white;
       padding: 20px;
@@ -26,8 +30,9 @@
       max-width: 400px;
       width: 100%;
     }
+
     button {
-      background-color: #ff69b4;
+      background-color: #6fa8dc; /* soft blue */
       color: white;
       border: none;
       padding: 10px 20px;
@@ -36,9 +41,11 @@
       margin: 10px;
       cursor: pointer;
     }
+
     button:hover {
-      background-color: #ff1493;
+      background-color: #3d85c6; /* deeper blue on hover */
     }
+
     #datePicker {
       margin-top: 20px;
       padding: 10px;
@@ -47,6 +54,7 @@
       width: 100%;
       font-size: 16px;
     }
+
     .hidden {
       display: none;
     }
@@ -63,7 +71,7 @@
   </div>
 
   <script>
-    emailjs.init("JveS8FesSHrDEssL8"); // Replace with your EmailJS user ID
+    emailjs.init("JveS8FesSHrDEssL8"); // Your EmailJS Public Key
 
     const questions = [
       "Would you like to go on a date with me? 💕",
