--- a/album.html
+++ b/album.html
@@ -90,8 +90,8 @@
     <div class="images">
       <img src="https://github.com/niteshsinghal5010/TryIt/blob/main/PR1.jpeg" alt="Memory 1" />
       <img src="https://github.com/niteshsinghal5010/TryIt/blob/main/PR2.jpeg" alt="Memory 2" />
-      <img src="images/pic3.jpg" alt="Memory 3" />
-      <img src="images/pic4.jpg" alt="Memory 4" />
+      <!--img src="images/pic3.jpg" alt="Memory 3" />
+      <img src="images/pic4.jpg" alt="Memory 4" /-->
     </div>
     <div class="quote">"In every smile, every tear, and every heartbeat, we shared something beautiful."</div>
   </div>
