Make some changes.

--- a/album.html
+++ b/album.html
@@ -88,8 +88,8 @@
 
   <div class="gallery" id="gallery">
     <div class="images">
-      <img src="https://github.com/niteshsinghal5010/TryIt/main/PR1.jpeg" alt="Memory 1" />
-      <img src="https://github.com/niteshsinghal5010/TryIt/main/PR2.jpeg" alt="Memory 2" />
+      <img src="https://raw.githubusercontent.com/niteshsinghal5010/TryIt/main/PR1.jpeg" alt="Memory 1" />
+      <img src="https://raw.githubusercontent.com/niteshsinghal5010/TryIt/main/PR2.jpeg" alt="Memory 2" />
       <!--img src="images/pic3.jpg" alt="Memory 3" />
       <img src="images/pic4.jpg" alt="Memory 4" /-->
     </div>
