--- a/album.html
+++ b/album.html
@@ -41,32 +41,44 @@
     .start-btn:hover {
       background-color: #004d99;
     }
+    .intro {
+      text-align: center;
+    }
     .gallery {
       display: none;
-      flex-direction: column;
-      align-items: center;
-      gap: 20px;
-      padding: 30px;
+      position: relative;
+      width: 100%;
+      max-width: 800px;
+      height: 500px;
+      margin-top: 30px;
     }
     .quote {
-      font-size: 24px;
-      text-align: center;
-      max-width: 600px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 22px;
       color: #003366;
+      text-align: center;
+      max-width: 300px;
       font-style: italic;
-    }
-    .images {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
+      z-index: 2;
     }
     .images img {
+      position: absolute;
       width: 45%;
+      height: auto;
       border-radius: 16px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-      object-fit: cover;
-      aspect-ratio: 4/3;
+      object-fit: contain;
+    }
+    .img-top-left {
+      top: 10px;
+      left: 10px;
+    }
+    .img-bottom-right {
+      bottom: 10px;
+      right: 10px;
     }
     @keyframes fadeInScale {
       0% {
@@ -88,10 +100,8 @@
 
   <div class="gallery" id="gallery">
     <div class="images">
-      <img src="https://raw.githubusercontent.com/niteshsinghal5010/TryIt/main/PR1.jpeg" alt="Memory 1" />
-      <img src="https://raw.githubusercontent.com/niteshsinghal5010/TryIt/main/PR2.jpeg" alt="Memory 2" />
-      <!--img src="images/pic3.jpg" alt="Memory 3" />
-      <img src="images/pic4.jpg" alt="Memory 4" /-->
+      <img class="img-top-left" src="https://raw.githubusercontent.com/niteshsinghal5010/TryIt/main/PR1.jpeg" alt="Memory 1" />
+      <img class="img-bottom-right" src="https://raw.githubusercontent.com/niteshsinghal5010/TryIt/main/PR1.jpeg" alt="Memory 2" />
     </div>
     <div class="quote">"In every smile, every tear, and every heartbeat, we shared something beautiful."</div>
   </div>
@@ -99,7 +109,7 @@
   <script>
     function startGallery() {
       document.querySelector('.intro').style.display = 'none';
-      document.getElementById('gallery').style.display = 'flex';
+      document.getElementById('gallery').style.display = 'block';
     }
   </script>
 </body>
