--- a/album.html
+++ b/album.html
@@ -44,42 +44,55 @@
     .intro {
       text-align: center;
     }
+
     .gallery {
       display: none;
-      position: relative;
       width: 100%;
-      max-width: 800px;
+      max-width: 900px;
       height: 500px;
       margin-top: 30px;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+      gap: 20px;
+      padding: 20px;
+      align-items: center;
+      justify-items: center;
     }
+
     .quote {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      grid-column: 1 / 3;
       font-size: 22px;
       color: #003366;
       text-align: center;
-      max-width: 300px;
+      max-width: 600px;
       font-style: italic;
-      z-index: 2;
+      padding: 10px 20px;
+      background-color: rgba(255,255,255,0.8);
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
-    .images img {
-      position: absolute;
-      width: 45%;
-      height: auto;
+
+    .img-top-left {
+      grid-column: 1 / 2;
+      grid-row: 1 / 2;
+      width: 100%;
+      max-width: 300px;
       border-radius: 16px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.2);
       object-fit: contain;
     }
-    .img-top-left {
-      top: 10px;
-      left: 10px;
-    }
+
     .img-bottom-right {
-      bottom: 10px;
-      right: 10px;
+      grid-column: 2 / 3;
+      grid-row: 2 / 3;
+      width: 100%;
+      max-width: 300px;
+      border-radius: 16px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      object-fit: contain;
     }
+
     @keyframes fadeInScale {
       0% {
         opacity: 0;
@@ -99,17 +112,15 @@
   </div>
 
   <div class="gallery" id="gallery">
-    <div class="images">
-      <img class="img-top-left" src="https://raw.githubusercontent.com/niteshsinghal5010/TryIt/main/PR1.jpeg" alt="Memory 1" />
-      <img class="img-bottom-right" src="https://raw.githubusercontent.com/niteshsinghal5010/TryIt/main/PR1.jpeg" alt="Memory 2" />
-    </div>
+    <img class="img-top-left" src="https://raw.githubusercontent.com/niteshsinghal5010/TryIt/main/PR1.jpeg" alt="Memory 1" />
     <div class="quote">"In every smile, every tear, and every heartbeat, we shared something beautiful."</div>
+    <img class="img-bottom-right" src="https://raw.githubusercontent.com/niteshsinghal5010/TryIt/main/PR2.jpeg" alt="Memory 2" />
   </div>
 
   <script>
     function startGallery() {
       document.querySelector('.intro').style.display = 'none';
-      document.getElementById('gallery').style.display = 'block';
+      document.getElementById('gallery').style.display = 'grid';
     }
   </script>
 </body>
