Make some changes.

--- a/album.html
+++ b/album.html
@@ -45,52 +45,54 @@
       text-align: center;
     }
 
-    .gallery {
+    .gallery-wrapper {
       display: none;
       width: 100%;
-      max-width: 900px;
+      max-width: 1000px;
       height: 500px;
+      position: relative;
       margin-top: 30px;
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
-      gap: 20px;
-      padding: 20px;
-      align-items: center;
-      justify-items: center;
     }
 
     .quote {
-      grid-column: 1 / 3;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
       font-size: 22px;
       color: #003366;
       text-align: center;
       max-width: 600px;
       font-style: italic;
-      padding: 10px 20px;
       background-color: rgba(255,255,255,0.8);
+      padding: 12px 24px;
       border-radius: 12px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      z-index: 2;
     }
 
     .img-top-left {
-      grid-column: 1 / 2;
-      grid-row: 1 / 2;
-      width: 100%;
-      max-width: 300px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 45%;
+      max-width: 350px;
       border-radius: 16px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-      object-fit: contain;
+      object-fit: cover;
+      aspect-ratio: 4 / 3;
     }
 
     .img-bottom-right {
-      grid-column: 2 / 3;
-      grid-row: 2 / 3;
-      width: 100%;
-      max-width: 300px;
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      width: 45%;
+      max-width: 350px;
       border-radius: 16px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-      object-fit: contain;
+      object-fit: cover;
+      aspect-ratio: 4 / 3;
     }
 
     @keyframes fadeInScale {
@@ -111,16 +113,16 @@
     <button class="start-btn" onclick="startGallery()">Let's View</button>
   </div>
 
-  <div class="gallery" id="gallery">
+  <div class="gallery-wrapper" id="gallery">
     <img class="img-top-left" src="https://raw.githubusercontent.com/niteshsinghal5010/TryIt/main/PR1.jpeg" alt="Memory 1" />
-    <div class="quote">"In every smile, every tear, and every heartbeat, we shared something beautiful."</div>
     <img class="img-bottom-right" src="https://raw.githubusercontent.com/niteshsinghal5010/TryIt/main/PR2.jpeg" alt="Memory 2" />
+    <div class="quote">"In every smile, every tear, and every heartbeat, we shared something beautiful."</div>
   </div>
 
   <script>
     function startGallery() {
       document.querySelector('.intro').style.display = 'none';
-      document.getElementById('gallery').style.display = 'grid';
+      document.getElementById('gallery').style.display = 'block';
     }
   </script>
 </body>
