--- a/album.html
+++ b/album.html
@@ -49,7 +49,7 @@
       display: none;
       width: 100%;
       max-width: 1000px;
-      height: 500px;
+      height: 600px;
       position: relative;
       margin-top: 30px;
     }
@@ -64,19 +64,16 @@
       text-align: center;
       max-width: 600px;
       font-style: italic;
-      background-color: rgba(255,255,255,0.8);
-      padding: 12px 24px;
-      border-radius: 12px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
       z-index: 2;
     }
 
     .img-top-left {
       position: absolute;
-      top: 0;
+      top: -30px;
       left: 0;
-      width: 45%;
-      max-width: 350px;
+      width: 48%;
+      height: auto;
+      max-width: 400px;
       border-radius: 16px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.2);
       object-fit: cover;
@@ -85,10 +82,11 @@
 
     .img-bottom-right {
       position: absolute;
-      bottom: 0;
+      bottom: -30px;
       right: 0;
-      width: 45%;
-      max-width: 350px;
+      width: 48%;
+      height: auto;
+      max-width: 400px;
       border-radius: 16px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.2);
       object-fit: cover;
