--- a/album.html
+++ b/album.html
@@ -46,52 +46,52 @@
     }
 
     .gallery-wrapper {
-      display: none;
-      width: 100%;
-      max-width: 1000px;
-      height: 800px;
-      position: relative;
-      margin-top: 15px;
+        display: none;
+        width: 100%;
+        max-width: 1000px;
+        height: 700px;
+        position: relative;
+        margin-top: 15px;
     }
 
     .quote {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      font-size: 22px;
-      color: #003366;
-      text-align: center;
-      max-width: 600px;
-      font-style: italic;
-      z-index: 2;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 22px;
+        color: #003366;
+        text-align: center;
+        max-width: 600px;
+        font-style: italic;
+        z-index: 2;
     }
 
+    /* Updated Image Styles */
     .img-top-left {
-      position: absolute;
-      top: -60px;
-      left: 0;
-      width: 48%;
-      height: auto;
-      max-width: 800px;
-      border-radius: 16px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-      object-fit: cover;
-      aspect-ratio: 4 / 3;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 48%;
+        max-width: 800px;
+        height: calc(50% - 40px); /* 50% height minus 20px spacing above/below quote */
+        border-radius: 16px;
+        box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+        object-fit: cover;
     }
 
     .img-bottom-right {
-      position: absolute;
-      bottom: -60px;
-      right: 0;
-      width: 48%;
-      height: auto;
-      max-width: 800px;
-      border-radius: 16px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-      object-fit: cover;
-      aspect-ratio: 4 / 3;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        width: 48%;
+        max-width: 800px;
+        height: calc(50% - 40px); /* 50% height minus 20px spacing above/below quote */
+        border-radius: 16px;
+        box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+        object-fit: cover;
     }
+
 
     @keyframes fadeInScale {
       0% {
