Make some changes.

--- a/album.html
+++ b/album.html
@@ -114,7 +114,7 @@
   <div class="gallery-wrapper" id="gallery">
     <img class="img-top-left" src="https://raw.githubusercontent.com/niteshsinghal5010/TryIt/main/PR1.jpeg" alt="Memory 1" />
     <img class="img-bottom-right" src="https://raw.githubusercontent.com/niteshsinghal5010/TryIt/main/PR2.jpeg" alt="Memory 2" />
-    <div class="quote">"In every smile, every tear, and every heartbeat, we shared something beautiful."</div>
+    <div class="quote">"You are adorable.."</div>
   </div>
 
   <script>
